--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <h2 class="logo"> SP<i class="fas fa-futbol"></i>RTFLIX</h2>
             <nav>
-                <a href="#">Inicio</a>
+                <a href="index.html">Inicio</a>
                 <a href="#">Basquete</a>
                 <a href="#">Beisebol</a>
                 <a href="#">Futebol</a>
@@ -35,7 +35,7 @@
                 <h3 class="titulo">UEFA Champions League</h3>
                 <p class="descricao">Os maiores craques da atualidade se encontram na maior competição de clubes do planeta. A competição que reune as maiores potências do continente europeu você encontra aqui, Simplemente Imperdivel!</p>
                 <div class="botoes">
-                    <a href="abertura.html">
+                    <a href="video/UEFA_Champions_League_Intro.mp4">
                         <button role="button" class="botao" onclick="HTMLDocument" >                                            
                             <i class="fas fa-play"></i>
                             ASSISTIR                
@@ -56,21 +56,31 @@
     <div class="carrosel-esportes"> 
         <h3>Pra quem é fanático por futebol:</h3>
         <div class="owl-carousel owl-theme">
-            <div class="item">
-                <img class="box-esporte" src="./img/champions-league.jpg" alt="" srcset="">
-            </div>
-            <div class="item">
-                <img class="box-esporte" src="./img/premiere.jpg" alt="" srcset="">
-            </div>
-            <div class="item">
-                <img class="box-esporte" src="./img/libertadores.jpg" alt="" srcset="">
-            </div>
-            <div class="item">
-                <img class="box-esporte" src="./img/europaleague.jpg" alt="" srcset="">
-            </div>
-            <div class="item">
-                <img class="box-esporte" src="./img/serieA.jpg" alt="" srcset="">
-            </div>
+            <a class="ucl" href="video/UEFA_Champions_League_Intro.mp4">
+                <div class="item">
+                    <img class="box-esporte" src="./img/champions-league.jpg" alt="" srcset="">
+                </div>
+            </a>
+            <a class="epl" href="video/EPL.mp4">
+                <div class="item">
+                    <img class="box-esporte" src="./img/premiere.jpg" alt="" srcset="">
+                </div>
+            </a>
+            <a class="tla" href="video/Libertadores 2021.mp4">
+                <div class="item">
+                    <img class="box-esporte" src="./img/libertadores.jpg" alt="" srcset="">
+                </div>
+            </a>
+            <a class="uel" href="video/UEFA Europa League Intro.mp4">
+                <div class="item">
+                    <img class="box-esporte" src="./img/europaleague.jpg" alt="" srcset="">
+                </div>
+            </a>
+            <a class="sat" href="video/Serie A_ Intro_Theme.mp4">
+                <div class="item">
+                    <img class="box-esporte" src="./img/serieA.jpg" alt="" srcset="">
+                </div>
+            </a>
             <div class="item">
                 <img class="box-esporte" src="./img/sulamericana.jpg" alt="" srcset="">
             </div>
@@ -104,15 +114,21 @@
     <div class="carrosel-esportes2">
         <h3>Pra quem gosta dos esportes americanos</h3>
         <div class="owl-carousel owl-theme">
-            <div class="item">
-                <img class="box-esporte" src="./img/nfl.jpg" alt="" srcset="">
-            </div>
-            <div class="item">
-                <img class="box-esporte" src="./img/nba.jpg" alt="" srcset="">
-            </div>
-            <div class="item">
-                <img class="box-esporte" src="./img/mlb.jpg" alt="" srcset="">
-            </div>
+            <a class="nfl" href="video/NFL.mp4">
+                <div class="item">
+                    <img class="box-esporte" src="./img/nfl.jpg" alt="" srcset="">
+                </div>
+            </a>
+            <a class="nba" href="video/NBA Season.mp4">
+                <div class="item">
+                    <img class="box-esporte" src="./img/nba.jpg" alt="" srcset="">
+                </div>
+            </a>
+            <a class="mlb" href="video/MLB.mp4">
+                <div class="item">
+                    <img class="box-esporte" src="./img/mlb.jpg" alt="" srcset="">
+                </div>
+            </a>
             <div class="item">
                 <img class="box-esporte" src="./img/nhl.jpg" alt="" srcset="">
             </div>
