--- a/informacao.html
+++ b/informacao.html
@@ -8,6 +8,21 @@
     <title>UEFA Champions League</title>
 </head>
 <body>
+    <header>
+        <div class="container">
+            <h2 class="logo"> SP<i class="fas fa-futbol"></i>RTFLIX</h2>
+            <nav>
+                <a href="index.html">Inicio</a>
+                <a href="#">Basquete</a>
+                <a href="#">Beisebol</a>
+                <a href="#">Futebol</a>
+                <a href="#">Futebol Americano</a>
+                <a href="#">Hóquei</a>
+                <a href="#">Lutas</a>
+            </nav>
+        </div>
+
+    </header>
     
     <h3 class="texto"> 
         <br><br><br><br><br><br>
@@ -38,7 +53,10 @@
         A final da edição de 2012–13 teve a maior audiência até o momento, atraindo 360 milhões de telespectadores.<br><br>
     </h3>
 
-
+    <script src="https://kit.fontawesome.com/cc6df2d5e9.js" crossorigin="anonymous"></script>
+    <script src="jquery.min.js"></script>
+    <script src="owl.carousel.min.js"></script>
+    <script src="setup.js"></script>
 
 
 
