--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <img class="box-esporte" src="./img/nba.jpg" alt="" srcset="">
                 </div>
             </a>
-            <a class="mlb" href="video/MLB.mp4">
+            <a class="mlb" href="video/Major_League_Baseball.mp4">
                 <div class="item">
                     <img class="box-esporte" src="./img/mlb.jpg" alt="" srcset="">
                 </div>
